99375 | Определение расстояния от поискового места до карточки

--- a/local/php_interface/composer.json
+++ b/local/php_interface/composer.json
@@ -17,5 +17,7 @@
             "composer/installers": true,
             "kylekatarnls/update-helper": true
         }
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
