--- a/local/php_interface/composer.json
+++ b/local/php_interface/composer.json
@@ -1,7 +1,8 @@
 {
     "require": {
         "andreyryabin/sprint.migration": "dev-master",
-        "webonyx/graphql-php": "^15.13"
+        "webonyx/graphql-php": "^15.13",
+        "bronevik/hotels-connector": "^5.2"
     },
     "autoload": {
         "psr-4": {"Local\\" : "lib/"}
