Revert "Merge branch 'revert-7c35328d' into 'main'"
This reverts merge request !190

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@
 /local/php_interface/init_constants.php
 /local/cron/*.log
 
-/local/modules
+/local/modules/sprint.migration
 .htaccess
 robots.txt
 
